# R-Note

./: .gitignore  .gitmodules  LICENSE.md  README.md
Note_back/: README.md  pom.xml
Note_back/src/main/java/com/riptidez/notebackend/: NoteBackEndApplication.java
Note_back/src/main/java/com/riptidez/notebackend/auth/entity/: User.java
Note_back/src/main/java/com/riptidez/notebackend/config/: DataSourceConfig.java  PrimaryDataSourceConfig.java  SecondaryDataSourceConfig.java
Note_back/src/main/resources/: application-example.yml  application-prod.yml  application.yml  banner.txt  db_credential_example.yml
Note_back/src/main/resources/config/: db_credential.yml  logback-spring.xml  mybatis-config.xml
Note_back/src/main/resources/mapper/auth/: UserMapper.xml
Note_back/src/main/resources/mapper/log/: LogMapper.xml
Note_back/src/main/resources/mapper/note/: NoteHistoryMapper.xml  NoteMapper.xml
Note_back/src/main/resources/mapper/student/: StudentMapper.xml
Note_back/src/main/resources/sql/: admin_init.sql  auth_db_init.sql  log_init.sql  note_db_init.sql  student_init.sql
Note_front/: .clang-format  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeUserPresets_example.json  httpmanager.cpp  httpmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
Note_front/NoteApp/: CMakeLists.txt  main.cpp
Note_front/QWindowkit/lib/: QWKCored.lib  QWKWidgetsd.lib
Note_front/installer/: installer.nsi
Note_front/qss/: light_fluent.qss
Note_front/resource/: app_icon.rc  resource.qrc
Note_front/src/: CMakeLists.txt
Note_front/src/Auth/: CMakeLists.txt  config_dialog.cpp  config_dialog.h  login_window.cpp  login_window.h  login_window.ui  loginwindow.cpp  loginwindow.h  register_window.cpp  register_window.h  register_window.ui  registerwindow.cpp  registerwindow.h
Note_front/src/Config/: CMakeLists.txt  app_config.cpp  app_config.h
Note_front/src/Editor/: CMakeLists.txt  editor_window.cpp  editor_window.h  editor_window.ui  editorwindow.cpp
Note_front/src/Http/: CMakeLists.txt  httpmanager.cpp  httpmanager.h
Note_front/src/Json/: CMakeLists.txt  note_structure_manager.cpp  note_structure_manager.h  notenode.h
Note_front/src/MainWindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Note_front/src/Markdown/: CMakeLists.txt  markdown_editor_widget.cpp  markdown_editor_widget.h  markdown_preview_widget.cpp  markdown_preview_widget.h
Note_front/src/NoteApp/: CMakeLists.txt  main.cpp
Note_front/src/TitleBar/: CMakeLists.txt  title_bar.cpp  title_bar.h
Note_front/src/Tools/: CMakelists.txt  hash_processor.cpp  hash_processor.h  markdown_renderer.cpp  markdown_renderer.h
(+38 files in other folders)
